[package]
name = "har2oa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "har2oa"

[[bin]]
name = "har2oa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
openapiv3-extended = { version = "6.0.0" }
serde_yaml = "0.9.25"
indexmap = "2"
convert_case = "0.6.0"
har = "0.8.0"
url = "2.4.0"
urlparse = "0.7.3"
itertools = "0.12.1"
clap = { version = "4.3.19", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
regex = "1.9.1"
once_cell = "1.18.0"
